--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
 
                 <div>
-                    <a href="#" class="btn">Download CV</a>
+                    <a href="https://files.fm/f/ywkjq5k68b" class="btn">Download Guia de Marca</a>
                 </div>
             </div>
 
